added database, fixed password

--- a/mqtt_subscriber/files/mqtt_subscriber.config
+++ b/mqtt_subscriber/files/mqtt_subscriber.config
@@ -1,7 +1,11 @@
 config mqtt_subscriber 'mqtt_subscriber_sct'
     option 'enable' 0
     option 'host' 'localhost'
-    option 'port' 8883
+    option 'port' 1883
+    option 'ca_file' '/etc/certificates/cert.cert.pem'
+    option 'username' 'admin'
+    option 'password' 'admin'
+    option 'use_tls' '1' 
 config topic
     option 'topic' 'new'
     option 'qos' 0
@@ -14,8 +18,8 @@ config topic
 config event
     option 'topic' 'new'
     option 'parameter' 'a'
-    option 'type' 'int'
-    option 'operator' '>'
+    option 'type' '0'
+    option 'operator' '0'
     option 'expected_value' '10'
-    option 'email' 'noreply@teltonika.lt'
+    option 'email' 'noreply@something.com'
     option 'receivers' 'jj.was.taken.was.taken@gmail.com'
