added event functionality

--- a/mqtt_subscriber/files/mqtt_subscriber.config
+++ b/mqtt_subscriber/files/mqtt_subscriber.config
@@ -22,4 +22,20 @@ config event
     option 'operator' '0'
     option 'expected_value' '10'
     option 'email' 'noreply@something.com'
-    option 'receivers' 'jj.was.taken.was.taken@gmail.com'
+    option 'receiver' 'simple@simple.com'
+config event
+    option 'topic' 'new'
+    option 'parameter' 'numeris'
+    option 'type' '0'
+    option 'operator' '2'
+    option 'expected_value' '20'
+    option 'email' 'noreply@something.com'
+    option 'receiver' 'simple@simple.com'
+config event
+    option 'topic' 'new/two'
+    option 'parameter' 'ahaha'
+    option 'type' '1'
+    option 'operator' '1'
+    option 'expected_value' 'ok'
+    option 'email' 'noreply@something.com'
+    option 'receiver' 'simple@simple.com'
