--- a/mqtt_subscriber/files/mqtt_subscriber.config
+++ b/mqtt_subscriber/files/mqtt_subscriber.config
@@ -21,15 +21,15 @@ config event
     option 'type' '0'
     option 'operator' '0'
     option 'expected_value' '10'
-    option 'email' 'noreply@something.com'
-    option 'receiver' 'simple@simple.com'
+    option 'email' 'jj'
+    option 'receiver' 'justinas.janusas@teltonika.lt'
 config event
     option 'topic' 'new'
     option 'parameter' 'numeris'
     option 'type' '0'
     option 'operator' '2'
     option 'expected_value' '20'
-    option 'email' 'noreply@something.com'
+    option 'email' 'jj'
     option 'receiver' 'simple@simple.com'
 config event
     option 'topic' 'new/two'
@@ -37,5 +37,5 @@ config event
     option 'type' '1'
     option 'operator' '1'
     option 'expected_value' 'ok'
-    option 'email' 'noreply@something.com'
-    option 'receiver' 'simple@simple.com'
+    option 'email' 'jj'
+    option 'receiver' 'to@example.com'
